Addressing some niggles and getting individual review editing working

--- a/DHGCDB/Views/Client/Details.cshtml
+++ b/DHGCDB/Views/Client/Details.cshtml
@@ -111,13 +111,13 @@
         </table>
 
         <p>
-            @Html.ActionLink("Add Individual", "AddIndividual", "Client", new { ID = Model.ID }, new { }) |
+            @Html.ActionLink("Add Individual", "AddIndividual", "Client", new { ID = Model.ID }, new { })
         </p>
 
         <h4>Reviews</h4>
 
          <p>
-             @Html.ActionLink("Create Review", "Create", "Review", new { Model.ID }, new { }) |
+             @Html.ActionLink("Create New Review", "Create", "Review", new { Model.ID }, new { })
          </p>
 
         <table class="table">
