--- a/DHGCDB/Views/Review/Edit.cshtml
+++ b/DHGCDB/Views/Review/Edit.cshtml
@@ -68,16 +68,6 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.GrowthIndividual, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.GrowthIndividual)
-                    @Html.ValidationMessageFor(model => model.GrowthIndividual, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-
-        <div class="form-group">
             @Html.LabelFor(model => model.NumberOfFunds, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.NumberOfFunds, new { htmlAttributes = new { @class = "form-control" } })
@@ -94,7 +84,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Review details", "Details",  new { ID = Model.ID } )
 </div>
 
 @section Scripts {
