Removing PeopleController and fixing various issue

--- a/DHGCDB/Views/Client/EditIndividual.cshtml
+++ b/DHGCDB/Views/Client/EditIndividual.cshtml
@@ -61,8 +61,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.IsPrimary, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.BirthDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.BirthDate, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.IsPrimary, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.IsPrimary, "", new { @class = "text-danger" })
             </div>
         </div>
 
