--- a/DHGCDB/Views/Client/AddIndividual.cshtml
+++ b/DHGCDB/Views/Client/AddIndividual.cshtml
@@ -74,7 +74,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to Client Detail", "Detail", new { ID = Model.Client.ID } )
+    @Html.ActionLink("Back to Client Detail", "Detail", new { ID = ViewContext.RouteData.Values["id"] } )
 </div>
 
 @section Scripts {
