--- a/DHGCDB/Views/Client/Details.cshtml
+++ b/DHGCDB/Views/Client/Details.cshtml
@@ -102,7 +102,7 @@
                     @Html.DisplayFor(modelItem => item.BirthDate)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "EditIndividual", new { id = item.ID }) |
+                    @Html.ActionLink("Edit / Add ATR", "EditIndividual", new { id = item.ID }) |
                     @Html.ActionLink("Delete", "DeleteIndividual", new { id = item.ID })
                 </td>
             </tr>
