--- a/DHGCDB/Views/Review/Details.cshtml
+++ b/DHGCDB/Views/Review/Details.cshtml
@@ -66,6 +66,33 @@
             @Html.DisplayFor(model => model.NumberOfFunds)
         </dd>
 
+
+        <dt>
+            @Html.DisplayNameFor(model => model.HowConducted)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.HowConductedView)
+        </dd>
+
+
+        <dt>
+            @Html.DisplayNameFor(model => model.KIIDsGiven)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.KIIDsGivenView)
+        </dd>
+
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ReviewType)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ReviewTypeView)
+        </dd>
+
     </dl>
 
     <p>
