Add ability for adding / editing additional product fee
Can exist on both joint and individual products

--- a/DHGCDB/Views/Client/Details.cshtml
+++ b/DHGCDB/Views/Client/Details.cshtml
@@ -136,6 +136,9 @@
                     <th>
                         @Html.DisplayNameFor(model => firstJointProduct.BusinessType)
                     </th>
+                    <th>
+                        @Html.DisplayNameFor(model => firstJointProduct.ProductFeeForDisplay)
+                    </th>
                     <th></th>
                 </tr>
 
@@ -146,6 +149,9 @@
                       </td>
                       <td>
                           @Html.DisplayFor(model => jointProduct.BusinessType.Name)
+                      </td>
+                      <td>
+                          @Html.DisplayFor(model => jointProduct.ProductFeeForDisplay)
                       </td>
                       <td>@Html.ActionLink("Edit", "EditJointProduct", "Client", new { id = Model.ID, subid = jointProduct.ID }, new { }) </td>
                   </tr>
