--- a/DHGCDB/Views/Client/EditIndividual.cshtml
+++ b/DHGCDB/Views/Client/EditIndividual.cshtml
@@ -86,6 +86,10 @@
         <th>
             @Html.DisplayNameFor(model => firstIndividualProduct.BusinessType)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => firstIndividualProduct.ProductFeeForDisplay)
+        </th>
+
         <th></th>
     </tr>
 
@@ -96,6 +100,9 @@
         </td>
         <td>
             @Html.DisplayFor(model => individualProduct.BusinessType.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(model => individualProduct.ProductFeeForDisplay)
         </td>
         <td>@Html.ActionLink("Edit", "EditIndividualProduct", "Client", new { id = Model.ID, subid = individualProduct.ID }, new { }) </td>
     </tr>
