--- a/DHGCDB/Views/Client/EditIndividualProduct.cshtml
+++ b/DHGCDB/Views/Client/EditIndividualProduct.cshtml
@@ -44,6 +44,14 @@
     </div>
 
     <div class="form-group">
+        @Html.LabelFor(model => model.AttitudeToRiskCategory, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownListFor(model => model.AttitudeToRiskCategory, Model.AttitudeToRiskCategoryList, "Please select", new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.AttitudeToRiskCategory, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
         @Html.LabelFor(model => model.ProductFeeApplies, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.ProductFeeApplies, new { htmlAttributes = new { @class = "form-control" } })
