--- a/DHGCDB/Views/FundSelection/DeleteFund.cshtml
+++ b/DHGCDB/Views/FundSelection/DeleteFund.cshtml
@@ -1,10 +1,10 @@
-﻿@model DHGCDB.Models.FundSelection
+﻿@model DHGCDB.Models.Fund
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Fund";
 }
 
-<h2>Delete</h2>
+<h2>Delete Fund</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
@@ -18,15 +18,6 @@
         <dd>
             @Html.DisplayFor(model => model.Name)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DateCreated)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DateCreated)
-        </dd>
-
     </dl>
 
     @using (Html.BeginForm()) {
@@ -34,7 +25,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to List", "Details", new { ID = Model.FundSelection.ID })
         </div>
     }
 </div>
