--- a/DHGCDB/Views/FundSelection/Index.cshtml
+++ b/DHGCDB/Views/FundSelection/Index.cshtml
@@ -30,6 +30,7 @@
         </td>
         <td>
             @Html.ActionLink("Details", "Details", new { id=item.ID }) |
+            @Html.ActionLink("Copy", "Copy", new { id = item.ID }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.ID })
         </td>
     </tr>
