--- a/DHGCDB/Views/Client/Edit.cshtml
+++ b/DHGCDB/Views/Client/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model DHGCDB.ViewModels.ClientAddress
+﻿@model DHGCDB.ViewModels.ClientForView
 
 @{
     ViewBag.Title = "Edit";
@@ -64,6 +64,14 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.PostCode, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.PostCode, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.ReviewFrequency, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.ReviewFrequency, new SelectList(ViewBag.ReviewFrequencyList, "Key", "Value"), "Please select", new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ReviewFrequency, "", new { @class = "text-danger" })
             </div>
         </div>
 
